test/classes/delete-free/error-shared-record.chpl
record R {
}

var x:shared R;
